[package]
name = "common-geo"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arrow.workspace = true
common-error.workspace = true
common-macro.workspace = true
geo = { version = "0.27.0", features = ["use-serde"] }
once_cell.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
snafu.workspace = true

[dev-dependencies]
